# imlgst-plugins-base

./: configure.ac
docs/plugins/: Makefile.am  gst-plugins-base-plugins-docs.sgml
docs/plugins/inspect/: plugin-imlscale.xml
gst/: Makefile.am  meson.build
gst/imlscale/: Makefile.am  gstimlscale.c  gstimlscale.h  meson.build
